# astrbot_plugin_autocaption

./: .gitignore  README.md  _conf_schema.json  main.py  metadata.yaml  nls.py  pyproject.toml  requirements.txt
SDKs/: nls_python_demo.py  oss_python_demo.py
